--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -14,9 +14,19 @@ body {
 
 body {
   font-family: "Poppins", sans-serif;
+  font-size: 16px;
 }
 
 a {
   color: inherit;
   text-decoration: none;
+}
+
+h1 {
+  font-size: 3.5rem;
+  line-height: 1.2;
+}
+
+h2 {
+  font-size: 3rem;
 }
